# ooze

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-build.yml
example/: CMakeLists.txt  example.sh  example_output.txt  fib.oz  main.cpp  script.oz
examples/raytracer/: CMakeLists.txt  raytrace.oz
examples/raytracer/ext/stb/: stb_image.h  stb_image_write.h
examples/raytracer/src/: collision.cpp  collision.h  image.cpp  image.h  main.cpp  ray.h  raytrace.cpp  raytrace.h  vec.h  view.h
ext/ctre/: CMakeLists.txt  ctre.h
include/ooze/: any.h  any_fn.h  any_function.h  ast.h  ast_flat.h  async_fn.h  borrowed_future.h  core.h  env.h  executor.h  forest.h  function_graph.h  functional.h  future.h  graph.h  indirect.h  inst.h  iter.h  native_registry.h  opaque.h  primitives.h  program.h  repl.h  result.h  slice.h  span.h  src_map.h  strong_id.h  traits.h  tree.h  type.h  type_flat.h  util.h
include/ooze/executor/: sequential_executor.h  task_executor.h  tbb_executor.h
regtest/: CMakeLists.txt  regtest.cpp
regtest/bench/: fib.oz
regtest/pass/: conditional.oz  fib.oz  fn.oz  fn_as_value.oz  literal.oz  mod.oz  tail_recursion.oz  tuple.oz  ufcs.oz  variable.oz  while.oz
src/: algorithm.h  ast.cpp  ast.h  async_functions.cpp  async_functions.h  bindings.h  constructing_graph.cpp  constructing_graph.h  env.cpp  env.h  forest.h  forest_dot.h  frontend.h  function_graph.cpp  function_graph.h  function_graph_construction.cpp  function_graph_construction.h  function_graph_inner.h  functional.h  graph.cpp  graph_construction.cpp  graph_construction.h  graph_execution.cpp  graph_execution.h  graph_inner.h  indirect.h  io.cpp  io.h  lexer.cpp  lexer.h  literal.cpp  literal.h  new.cpp  ooze.cpp  ooze.h  overload_resolution.cpp  overload_resolution.h  parser.cpp  parser.h  parser_combinators.h  (+24 more)
test/: CMakeLists.txt  any_function_test.cpp  any_test.cpp  async_test.cpp  async_test.h  borrowed_future_test.cpp  executor_test.cpp  forest_test.cpp  frontend_helpers.h  function_graph_test.cpp  future_test.cpp  graph_test.cpp  lexer_test.cpp  ooze_test.cpp  overload_resolution_test.cpp  parser_combinator_test.cpp  parser_flat_test.cpp  parser_test.cpp  pretty_print_test.cpp  repl_test.cpp  result_test.cpp  runtime_test.cpp  runtime_test.h  sema_test.cpp  stress_test.cpp  test.h  test_main.cpp  type_check_test.cpp  type_test.cpp
tests/: CMakeLists.txt  any_test.cpp  borrowed_future_test.cpp  forest_test.cpp  frontend_helpers.h  function_graph_test.cpp  future_test.cpp  lexer_test.cpp  ooze_test.cpp  parser_combinator_test.cpp  parser_test.cpp  pretty_print_test.cpp  repl_test.cpp  result_test.cpp  runtime_test.cpp  runtime_test.h  sema_test.cpp  stress_test.cpp  test.h  type_check_test.cpp
tools/: bench.py  configure.sh  configure_debug.sh  run_regtests.py
